fix: z-index conflicts

--- a/src/scss/views/_detail.scss
+++ b/src/scss/views/_detail.scss
@@ -34,7 +34,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 8;
+    z-index: 9;
     display: flex;
     flex-direction: column;
     justify-content: center;
